syntax = "proto3";

package pathwar.engine;

//import "github.com/golang/protobuf/ptypes/timestamp/timestamp.proto";
import "google/api/annotations.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/grpc-ecosystem/grpc-gateway/protoc-gen-swagger/options/annotations.proto";

import "pwsso.proto";
import "pwdb.proto";

option go_package = "pathwar.land/go/pkg/pwengine";
option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  host: "api.pathwar.land";
  base_path: "/";
  info: {
    title: "Pathwar API";
    version: "1.0",
    contact: {
      name: "Pathwar Staff";
      url: "https://github.com/pathwar/pathwar";
      email: "staff@pathwar.land";
    };
    license: {
      name: "(Apache-2.0 OR MIT)";
      url: "https://github.com/pathwar/pathwar/blob/master/COPYRIGHT";
    };
  };
  external_docs: {
    url: "https://github.com/pathwar/pathwar";
    description: "More about Pathwar";
  };
  //schemes: HTTP;
  schemes: HTTPS;
  schemes: WSS;
  consumes: "application/json";
  produces: "application/json";

  security_definitions: {
    security: {
      key: "BasicAuth";
      value: {
        type: TYPE_BASIC;
      };
    };
    security: {
      key: "ApiKeyAuth";
      value: {
        type: TYPE_API_KEY;
        in: IN_HEADER;
        name: "X-API-Key";
      };
    };
  };
  security: {
    security_requirement: {
      key: "BasicAuth";
      value: {};
    };
    security_requirement: {
      key: "ApiKeyAuth";
      value: {};
    };
  };
  responses: {
    key: "403";
    value: {
      description: "Returned when the user does not have permission to access the resource.";
    };
  };
  responses: {
    key: "404";
    value: {
      description: "Returned when the resource does not exist.";
      schema: {
        json_schema: {
          type: STRING;
        };
      };
    };
  };
};

service Engine {
  // Verify the service is up and running
  rpc Ping(Void) returns (Void) { option (google.api.http) = {get: "/ping"}; };
  // Get current user session, based on JWT token
  rpc GetUserSession(Void) returns (UserSessionOutput) { option (google.api.http) = {get: "/user-session"}; };
  // List users
  rpc ListLevels(Void) returns (pathwar.db.LevelList) { option (google.api.http) = {get: "/levels"}; };
  // List teams
  rpc GetStatus(Void) returns (Status) { option (google.api.http) = {get: "/status"}; }

  //
  // dev helpers
  //
  rpc GetInfo(Void) returns (Info) { option (google.api.http) = {get: "/info"}; };
  rpc GenerateFakeData(Void) returns (Void) { option (google.api.http) = {post: "/dev/generate-fake-data"}; };
  rpc DBDump(Void) returns (pathwar.db.Dump) { option (google.api.http) = {get: "/dev/sql-dump"}; };
}

// Void is an empty message
message Void {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    example: { value: '{}' };
  };
}

message UserSessionOutput {
  message TournamentAndTeam {
    pathwar.db.Tournament tournament = 1;
    pathwar.db.TournamentTeam team = 2;
  }

  pathwar.db.User user = 1;
  bool is_new_user = 2;
  pathwar.sso.Claims claims = 3;
  int32 notifications = 4;
  repeated TournamentAndTeam tournaments = 5;
}

message Status {
  bool everything_is_ok = 1 [(gogoproto.customname) = "EverythingIsOK"];
  // FIXME: add more tests
}

message Info {
  string version = 1;  // git tag
  int32 uptime = 2;    // seconds
  string commit = 3;   // git sha
  string built_at = 4; // date
  string built_by = 5; // builder
}
